Bug fix on menu items not aligning properly on Safari

--- a/assets/custom/css/custom_frontend_metronic.css
+++ b/assets/custom/css/custom_frontend_metronic.css
@@ -759,6 +759,9 @@ a.pdp--color-name {
 	.page-breadcrumb.breadcrumb.breadcrumb-thumbs {
 		margin-left: 20px;
 	}
+	.navbar-nav {
+		float: none;
+	}
 }
 @media (max-width:767px) {
 	.menu-toggler-2 {
